History of collective.realestatebroker
======================================

2.0.1 beta3 (unreleased)
------------------------

- Google maps' js is only enabled if the url ends on '/map' now, so the other
  tabs don't have to load it. [reinout]

2.0.1 beta2 (released 2008-01-17)
---------------------------------

- Added manager-only textual search form to the listing templates. [reinout]

2.0.1 beta  (released 2008-01-15)
---------------------------------

- Capitalized the 'view' action so that the translation is picked up. [reinout]

- Dutch translation fix ("opslag"). [reinout]

- Removed an unused viewletmanager configuration and enabled the titlemanager
  for every skin.

- Added two extra safe_unicode() calls to the pdf generator to prevent decode
  errors.

2.0 final
---------

- Released on 2008-01-11, no changes from the rc6.

2.0 rc6
-------

- README updated. [reinout]

- Old temporary image size name renamed to something more
  appropriate. [fredvd]

- Disabling special kk_von handling as the values of the field are the same
  again as in the old database. Sorry for the noise. [reinout]

2.0 rc5
-------

- Fix for faulty images (width==0, so you get a division by zero error)
  [reinout]

2.0 rc4
-------

- rent_buy vocabulary is handled by the propertysheet again.

2.0 rc2
-------

- Optionally disabled filtering of empty fields. [reinout]

- Translation improvement for boolean fields. [reinout]

- Small pdf page margin changes. [reinout]

- Rent/buy is now a fixed vocabulary (needed for a userfriendly default
  value). [reinout]

- Added try/except for corrupt images (read: unaccessible images that redirect
  to a login page). [Reinout]

2.0 rc
------

- Translated the schemata names and the workflow names (in a separate
  old-style Product: reb_i18n) [Reinout van Rees]

- Added rent/buy field to Residential, too.